--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,11 @@
 {
-  "name": "funbound",
+  "name": "Funbound",
   "version": "0.0.0",
+  "homepage": "https://github.com/JAStanton/Funbound",
   "authors": [
     "Jonathan Stanton <jonathan@jastanton.com>"
   ],
-  "description": "Funbound is a mini game similar to Scorched Earth or Tanks.",
   "license": "MIT",
-  "homepage": "http://jstan.me",
-  "private": true,
   "ignore": [
     "**/.*",
     "node_modules",
