--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,6 @@
 {
-  "name": "Funbound",
+  "name": "polymer-image-test",
   "version": "0.0.0",
-  "homepage": "https://github.com/JAStanton/Funbound",
   "authors": [
     "Jonathan Stanton <jonathan@jastanton.com>"
   ],
